--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
     "@fastify/sensible": "~5.2.0",
-    "@forge/manifest": "^9.1.0",
+    "@forge/manifest": "^10.3.0",
     "@swc/helpers": "0.5.11",
-    "axios": "1.6.7",
+    "axios": "^1.11.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
     "fs-extra": "^10.0.1",
