--- a/e2e/nx-forge-e2e/.env.example
+++ b/e2e/nx-forge-e2e/.env.example
@@ -14,3 +14,6 @@ ATLASSIAN_SITE_URL=my-jira-site.atlassian.net
 
 # jira, confluence, compass
 ATLASSIAN_PRODUCT=jira
+
+# https://developer.atlassian.com/console/developer-space/<developer-space-id>
+DEVELOPER_SPACE_ID=c4ea99ee-0267-12db-89c8-bf0fbaac8412
