--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -18,7 +18,7 @@ jobs:
         name: Derive appropriate SHAs for base and head for `nx affected` commands
       - uses: actions/setup-node@v4
         with:
-          node-version: 'lts/-1'
+          node-version: 'lts/*'
       - run: npm ci
       - run: npx nx affected --target=build --parallel=2
       - run: npx nx affected --target=test --parallel=2
